Fixed Logo styling on small screens and made create note working

--- a/src/index.css
+++ b/src/index.css
@@ -84,10 +84,11 @@ html, body {
 
 .logo-animate-container {
   position: fixed;
-  top: 1rem;
-  left: 1rem;
+  /* top: 1rem;
+  left: 1rem; */
   display: inline-block;
   perspective: 1000px;
+  @apply bg-[#0F0F1A] md:bg-transparent py-[1rem] md:py-0 px-[1rem] md:px-0 w-full md:w-auto md:top-[1rem] md:left-[1rem];
 }
 
 .logo-animate-text {
